// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Filter and Rating Option Generators Filter Option Generators getAirplaneTypeCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 2",
    "value": "0-2",
  },
  {
    "label": "3-4",
    "value": "3-4",
  },
  {
    "label": "5-6",
    "value": "5-6",
  },
  {
    "label": "> 7",
    "value": "7+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getAirportAreaHectaresRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 400",
    "value": "0-400",
  },
  {
    "label": "401-800",
    "value": "401-800",
  },
  {
    "label": "801-1.550",
    "value": "801-1550",
  },
  {
    "label": "> 1.551",
    "value": "1551+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getAirportServices should return a valid array of filter options 1`] = `
[
  {
    "label": "dutyFree",
    "value": "hasDutyFree",
  },
  {
    "label": "restaurants",
    "value": "hasRestaurants",
  },
  {
    "label": "lounges",
    "value": "hasLounges",
  },
  {
    "label": "carRental",
    "value": "hasCarRental",
  },
  {
    "label": "healthServices",
    "value": "hasHealthServices",
  },
  {
    "label": "childrensPlayground",
    "value": "hasChildrensPlayArea",
  },
  {
    "label": "placeOfWorship",
    "value": "hasPrayerRoom",
  },
  {
    "label": "hotels",
    "value": "hasHotels",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getAirportTypes should return a valid array of filter options 1`] = `
[
  {
    "label": "mega",
    "value": "mega_airport",
  },
  {
    "label": "large",
    "value": "large_airport",
  },
  {
    "label": "medium",
    "value": "medium_airport",
  },
  {
    "label": "small",
    "value": "small_airport",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getAlliances should return a valid array of filter options 1`] = `
[
  {
    "label": "Star Alliance",
    "value": "star alliance",
  },
  {
    "label": "OneWorld",
    "value": "oneworld",
  },
  {
    "label": "SkyTeam",
    "value": "skyteam",
  },
  {
    "label": "none",
    "value": "none",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getApronCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 5",
    "value": "0-5",
  },
  {
    "label": "6-8",
    "value": "6-8",
  },
  {
    "label": "9-15",
    "value": "9-15",
  },
  {
    "label": "> 16",
    "value": "16+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getAverageAgeRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 8",
    "value": "0-8",
  },
  {
    "label": "8.1-11",
    "value": "8.1-11",
  },
  {
    "label": "11.1-13",
    "value": "11.1-13",
  },
  {
    "label": "> 13.1",
    "value": "13.1+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getBaggageCapacityRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 400",
    "value": "0-400",
  },
  {
    "label": "401-700",
    "value": "401-700",
  },
  {
    "label": "701-950",
    "value": "701-950",
  },
  {
    "label": "> 951",
    "value": "951+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getBusinessModels should return a valid array of filter options 1`] = `
[
  {
    "label": "cargo",
    "value": "cargo",
  },
  {
    "label": "passenger",
    "value": "passenger",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getBusinessTypes should return a valid array of filter options 1`] = `
[
  {
    "label": "majorInternational",
    "value": "major_international",
  },
  {
    "label": "regional",
    "value": "regional",
  },
  {
    "label": "lowCost",
    "value": "low_cost",
  },
  {
    "label": "cargo",
    "value": "cargo",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getCheckinTimeAvgRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 12",
    "value": "0-12",
  },
  {
    "label": "13-16",
    "value": "13-16",
  },
  {
    "label": "17-22",
    "value": "17-22",
  },
  {
    "label": "> 23",
    "value": "23+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getDestinationCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 10",
    "value": "0-10",
  },
  {
    "label": "11-22",
    "value": "11-22",
  },
  {
    "label": "23-50",
    "value": "23-50",
  },
  {
    "label": "> 51",
    "value": "51+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getDestinationCountriesRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 5",
    "value": "0-10",
  },
  {
    "label": "6-15",
    "value": "11-15",
  },
  {
    "label": "16-20",
    "value": "16-20",
  },
  {
    "label": "> 21",
    "value": "21+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getDomesticConnectionsRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 5",
    "value": "0-5",
  },
  {
    "label": "6-10",
    "value": "6-10",
  },
  {
    "label": "11-15",
    "value": "11-15",
  },
  {
    "label": "> 16",
    "value": "16+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getElevationFtRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 54",
    "value": "0-54",
  },
  {
    "label": "55-184",
    "value": "55-184",
  },
  {
    "label": "185-782",
    "value": "185-782",
  },
  {
    "label": "> 783",
    "value": "783+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getEmployeeCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 2000",
    "value": "0-200",
  },
  {
    "label": "201-600",
    "value": "201-600",
  },
  {
    "label": "601-1.000",
    "value": "601-1000",
  },
  {
    "label": "> 1.001",
    "value": "1001+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getFoundingYearRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 1944",
    "value": "0-1944",
  },
  {
    "label": "1945-1969",
    "value": "1945-1969",
  },
  {
    "label": "1970-1999",
    "value": "1970-1999",
  },
  {
    "label": "> 2000",
    "value": "2000+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getInternationalConnectionsRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 12",
    "value": "0-12",
  },
  {
    "label": "13-25",
    "value": "13-25",
  },
  {
    "label": "26-40",
    "value": "26-40",
  },
  {
    "label": "> 41",
    "value": "41+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getLoungeCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 2",
    "value": "0-2",
  },
  {
    "label": "3-5",
    "value": "3-5",
  },
  {
    "label": "> 6",
    "value": "6+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getParkingCapacityVehiclesRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 1.500",
    "value": "0-1500",
  },
  {
    "label": "1.501-4.000",
    "value": "1501-4000",
  },
  {
    "label": "4.001-8.000",
    "value": "4001-8000",
  },
  {
    "label": "> 8.000",
    "value": "8001+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getPassengerCapacityRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 2M",
    "value": "0-2",
  },
  {
    "label": "2.1M-6.4M",
    "value": "2.1-6.4",
  },
  {
    "label": "6.5M-14.9M",
    "value": "6.5-14.9",
  },
  {
    "label": "15M-24.9M",
    "value": "15-24.9",
  },
  {
    "label": "25M-49.9M",
    "value": "25-49.9",
  },
  {
    "label": "> 50M",
    "value": "50+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getRegions should return a valid array of filter options 1`] = `
[
  {
    "label": "europe",
    "value": "EU",
  },
  {
    "label": "asia",
    "value": "AS",
  },
  {
    "label": "northAmerica",
    "value": "NA",
  },
  {
    "label": "southAmerica",
    "value": "SA",
  },
  {
    "label": "africa",
    "value": "AF",
  },
  {
    "label": "oceania",
    "value": "OC",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getRunwayCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "1-2",
    "value": "0-2",
  },
  {
    "label": "3-4",
    "value": "3-4",
  },
  {
    "label": "> 5",
    "value": "5+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getRunwayLengthMRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 2.930",
    "value": "0-2930",
  },
  {
    "label": "2.931-3.350",
    "value": "2931-3350",
  },
  {
    "label": "3.351-3.650",
    "value": "3351-3650",
  },
  {
    "label": "> 3.651",
    "value": "3651+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getSecurityQueueTimeRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 10",
    "value": "0-10",
  },
  {
    "label": "11-15",
    "value": "11-15",
  },
  {
    "label": "16-20",
    "value": "16-20",
  },
  {
    "label": "> 21",
    "value": "21+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getTerminalAreaHectaresRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 4",
    "value": "0-4",
  },
  {
    "label": "4.1-6",
    "value": "4.1-6",
  },
  {
    "label": "6.1-15",
    "value": "6.1-15",
  },
  {
    "label": "> 15.1",
    "value": "15.1+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getTerminalCountRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "1-2",
    "value": "0-2",
  },
  {
    "label": "3-4",
    "value": "3-4",
  },
  {
    "label": "> 5",
    "value": "5+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getTotalAirplaneRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 20",
    "value": "0-8",
  },
  {
    "label": "21-50",
    "value": "9-15",
  },
  {
    "label": "51-100",
    "value": "16-40",
  },
  {
    "label": "101-200",
    "value": "41-99",
  },
  {
    "label": "100-199",
    "value": "100-199",
  },
  {
    "label": "> 200",
    "value": "200+",
  },
]
`;

exports[`Filter and Rating Option Generators Filter Option Generators getTowerHeightMRanges should return a valid array of filter options 1`] = `
[
  {
    "label": "< 30",
    "value": "0-30",
  },
  {
    "label": "31-35",
    "value": "31-35",
  },
  {
    "label": "36-40",
    "value": "36-40",
  },
  {
    "label": "> 41",
    "value": "41+",
  },
]
`;

exports[`Filter and Rating Option Generators Rating Generators getGoogleRatings should return an array of numbers 1`] = `
[
  1,
  2,
  3,
  4,
  5,
]
`;

exports[`Filter and Rating Option Generators Rating Generators getSkytraxRatings should return an array of numbers 1`] = `
[
  1,
  2,
  3,
  4,
  5,
]
`;
